--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width,initial-scale=1,viewport-fit=cover"
     />
-    <title>CoLab</title>
+    <title>colab</title>
   </head>
   <body>
     <div id="root"></div>
